Update Stikliu g. instructions

--- a/Gatves/Stikliu/Directions/No-parking/stikliu-directions-en.html
+++ b/Gatves/Stikliu/Directions/No-parking/stikliu-directions-en.html
@@ -3,7 +3,7 @@
 <html lang="en">
 	<head>
 		<link rel="stylesheet" type="text/css" href="/Style.css" />
-		<meta charset="utf-8" content="width=device-width, initial-scale=1.0"/>
+		<meta charset="utf-8" content="width=device-width, initial-scale=1.0" />
 		<script src="/Components/Custom.js" type="text/javascript" defer></script>
 		<title>Very Vilnius | Stikliu</title>
 	</head>
@@ -22,8 +22,9 @@
 						<h1>Location</h1>
 						<div class="instruction-text">
 							<p>
-								The address is <mark>Gaono str. 10</mark>, Vilnius. The entry is through
-								a gateway.
+								The address is <mark>Gaono str. 10, flat no. 2</mark>, Vilnius. The
+								entry is through a gateway. If the gates to the yard are closed, please
+								enter the code <mark>2*3909</mark> on the wall to Your left.
 							</p>
 						</div>
 						<div class="image" id="s-d-1"></div>
@@ -34,9 +35,11 @@
 						<div class="instruction-text">
 							<p>
 								When You go through the gate, You will see a keybox on your right. Open
-								the keybox with a code you received through SMS.
-								<mark>When You have taken the keys from the keybox, close it and dial a
-									random combination, do not leave it unlocked.</mark>
+								the ABUS keybox with a code you have received.
+								<mark>
+									When You have taken the apartment keys from the keybox, close it and
+									dial a random combination, do not leave it unlocked.</mark
+								>
 							</p>
 						</div>
 						<div class="image" id="s-d-2"></div>
@@ -46,8 +49,9 @@
 						<h1>Going inside</h1>
 						<div class="instruction-text">
 							<p>
-								Now you can go to the brown door and unlock it, turn
-								<mark>right</mark> and climb up the stairs.
+								Now you can go to the brown door and enter the same code
+								<mark>2*3909</mark> on the left wall . Then turn <mark>right</mark> and
+								climb up the stairs.
 							</p>
 						</div>
 						<div class="image" id="s-d-3"></div>
@@ -57,8 +61,8 @@
 						<h1>Entering the apartment</h1>
 						<div class="instruction-text">
 							<p>
-								When you have entered the building and climed up the stairs, the door
-								with a <mark>number 2</mark> on it will be the apartment.
+								You will be able to open Apartment <mark>number 2</mark> with the key
+								you have gotten outside.
 							</p>
 						</div>
 						<div class="image" id="s-d-4"></div>
