--- a/Gatves/Stikliu/Directions/No-parking/stikliu-directions-lt.html
+++ b/Gatves/Stikliu/Directions/No-parking/stikliu-directions-lt.html
@@ -21,7 +21,11 @@
 					<div class="step">
 						<h1>Vieta</h1>
 						<div class="instruction-text">
-							<p>Adresas yra <mark>Gaono g. 10</mark>, Vilnius. Įėjimas pro vartus.</p>
+							<p>
+								Adresas yra <mark>Gaono g. 10, butas 2</mark>, Vilnius. Įėjimas pro
+								vartus. Jeigu praėjimo varteliai uždaryti kairėje ant sienos suveskite
+								kodą <mark>2*3909</mark>.
+							</p>
 						</div>
 						<div class="image" id="s-d-1"></div>
 					</div>
@@ -30,8 +34,8 @@
 						<h1>Raktų gavimas</h1>
 						<div class="instruction-text">
 							<p>
-								Kai įeisite pro vartus, dešinėje pamatysite raktų dėžutę, atidarykite ją
-								su žinute gautu kodu.<mark>
+								Kai įeisite pro vartus, dešinėje pamatysite ABUS raktų dėžutę, kurią
+								atidarysite su žinute gautu kodu.<mark>
 									Iš dežutės raktus pasiėmus ją uždarykite ir įveskite atsitiktinę
 									skaičių kombinaciją, nepalikte jos atidarytos.</mark
 								>
@@ -44,8 +48,8 @@
 						<h1>Įėjimas į vidų</h1>
 						<div class="instruction-text">
 							<p>
-								Dabar galite atidaryti rudas duris, pasukti <mark>dešinėn</mark>, ir
-								užlipti laiptais
+								Laiptinės durys atsidaro su tuo pačiu kodu <mark>2*3909</mark>.
+								Laiptinėje pasukite į dešinę.
 							</p>
 						</div>
 						<div class="image" id="s-d-3"></div>
@@ -54,7 +58,10 @@
 					<div class="step">
 						<h1>Įėjimas į aprtamentą</h1>
 						<div class="instruction-text">
-							<p>Užlipus laiptais apartamento durys <mark>nr. 2.</mark></p>
+							<p>
+								Užlipus laiptais apartamento durys <mark>nr. 2</mark>, kurias
+								atidarysite su raktu išimtu iš dėžutės.
+							</p>
 						</div>
 						<div class="image" id="s-d-4"></div>
 					</div>
