--- a/Gatves/Stikliu/Directions/No-parking/stikliu-directions-ru.html
+++ b/Gatves/Stikliu/Directions/No-parking/stikliu-directions-ru.html
@@ -21,7 +21,10 @@
 					<div class="step">
 						<h1>Расположение</h1>
 						<div class="instruction-text">
-							<p>Точный адрес - <mark>Gaono 10, квартира 2</mark></p>
+							<p>
+								Точный адрес - <mark>Gaono 10, квартира 2</mark> <br />Если ворота во
+								двор закрыты- на левой стене наберите код <mark>2*3909</mark>
+							</p>
 						</div>
 						<div class="image" id="s-d-1"></div>
 					</div>
@@ -30,10 +33,11 @@
 						<h1>получение ключей</h1>
 						<div class="instruction-text">
 							<p>
-								Зайдите во двор (см. фото), там на правой стороне найдете коробку с
-								ключами
+								Зайдите во двор (см. фото), там на правой стороне найдете коробку ABUS с
+								ключом от апартамента. <br />
 								<mark
-									>Введите код который получите и взяв ключи прокрутите любые цифры чтобы не остался код.</mark
+									>Введите код который получите и взяв ключи прокрутите любые цифры чтобы
+									не остался код.</mark
 								>
 							</p>
 						</div>
@@ -44,17 +48,17 @@
 						<h1>Вход в квартиру</h1>
 						<div class="instruction-text">
 							<p>
-								Введите код из полученого SMS, зайдите в здание, квартира
-								<mark>номер 2</mark> будет на <mark>правой</mark> стороне.
+								Чтобы зайти в подъезд на левой стене введите тот же код как около ворот
+								<mark>2*3909</mark>.
 							</p>
 						</div>
 						<div class="image" id="s-d-3"></div>
 					</div>
 					<div class="step">
 						<div class="instruction-text">
-							<!-- Prevents image from collapsing to 0 width (Add grid sistem for side pictures if necessary) -->
-							<p class="invcont">
-								a-------------------------------------------------------------------------
+							<p>
+								В подъезде поверните на право и квартиру <mark>но.2</mark> откройте с
+								ключом который нашли в коробке.
 							</p>
 						</div>
 						<div class="image" id="s-d-4"></div>
