--- a/Gatves/Stikliu/Directions/No-parking/stikliu-directions-en.html
+++ b/Gatves/Stikliu/Directions/No-parking/stikliu-directions-en.html
@@ -21,13 +21,16 @@
 					<div class="step">
 						<h1>Location</h1>
 						<div class="instruction-text">
-							<p>
-								The address is <mark>Gaono str. 10, flat no. 2</mark>, Vilnius. The
-								entry is through a gateway. If the gates to the yard are closed, please
-								enter the code <mark>2*3909</mark> on the wall to Your left.
-							</p>
+							<p>The address is <mark>Gaono str. 10, flat no. 2</mark>, Vilnius.</p>
 						</div>
 						<div class="image" id="s-d-1"></div>
+						<div class="instruction-text">
+							<p>
+								The entry is through a gateway. If the gates to the yard are closed,
+								please enter the code <mark>2*3909</mark> on the wall to Your left.
+							</p>
+						</div>
+						<div class="image" id="s-d-6"></div>
 					</div>
 
 					<div class="step">
@@ -35,7 +38,14 @@
 						<div class="instruction-text">
 							<p>
 								When You go through the gate, You will see a keybox on your right. Open
-								the ABUS keybox with a code you have received.
+								the ABUS keybox with a code you have received in the email.
+								<br />
+								<br />
+								In the keybox You will find the apartment key and a remote for the gate,
+								if parking is necessary. The 'A' button on the remote opens the gates,
+								who automatically close after 30 sec.
+								<br />
+								<br />
 								<mark>
 									When You have taken the apartment keys from the keybox, close it and
 									dial a random combination, do not leave it unlocked.</mark
@@ -55,6 +65,7 @@
 							</p>
 						</div>
 						<div class="image" id="s-d-3"></div>
+						<div class="image" id="s-d-7"></div>
 					</div>
 
 					<div class="step">
@@ -66,6 +77,25 @@
 							</p>
 						</div>
 						<div class="image" id="s-d-4"></div>
+						<div class="image" id="s-d-8"></div>
+					</div>
+
+					<div class="step">
+						<h1>Exit / Departure</h1>
+						<div class="instruction-text">
+							<p>
+								When leaving, open the pedestrian gate by pressing the "Exit" button on
+								the walls near the gate. <br />
+								On your departure, please leave the apartment key and the remote control
+								in the same box.
+								<br />
+								<br />
+								You can also use the intercom during your stay (person located outside
+								presses no. 2 on the gate and stairwell door, and the one in the
+								apartment lets in).
+							</p>
+						</div>
+						<div class="image" id="s-d-9"></div>
 					</div>
 				</div>
 			</div>
