--- a/Gatves/Stikliu/Directions/No-parking/stikliu-directions-lt.html
+++ b/Gatves/Stikliu/Directions/No-parking/stikliu-directions-lt.html
@@ -21,22 +21,32 @@
 					<div class="step">
 						<h1>Vieta</h1>
 						<div class="instruction-text">
-							<p>
-								Adresas yra <mark>Gaono g. 10, butas 2</mark>, Vilnius. Įėjimas pro
-								vartus. Jeigu praėjimo varteliai uždaryti kairėje ant sienos suveskite
-								kodą <mark>2*3909</mark>.
-							</p>
+							<p>Adresas yra <mark>Gaono g. 10, butas 2</mark>, Vilnius.</p>
 						</div>
 						<div class="image" id="s-d-1"></div>
+						<div class="instruction-text">
+							<p>
+								Įėjimas pro vartus. Jeigu praėjimo varteliai uždaryti kairėje ant sienos
+								suveskite kodą <mark>2*3909</mark>.
+							</p>
+						</div>
+						<div class="image" id="s-d-6"></div>
 					</div>
 
 					<div class="step">
 						<h1>Raktų gavimas</h1>
 						<div class="instruction-text">
 							<p>
-								Kai įeisite pro vartus, dešinėje pamatysite ABUS raktų dėžutę, kurią
-								atidarysite su žinute gautu kodu.<mark>
-									Iš dežutės raktus pasiėmus ją uždarykite ir įveskite atsitiktinę
+								Įėjus pro vartus ant sienos dešinėje pamatysite ABUS raktų dėžutę, kurią
+								atidarysite įvedus kodą gautą laiške. <br />
+								<br />
+								Dežutėje rasite raktą nuo buto bei pultelį nuo įvažiavimo vartų, jei
+								reikalingas parkavimas kieme. Pultelyje raidė 'A' atidaro vartus, kurie
+								automatiškai užsidaro po 30 sek.
+								<br />
+								<br />
+								<mark>
+									Pasiėmus iš dežutės raktus ją uždarykite ir įveskite atsitiktinę
 									skaičių kombinaciją, nepalikte jos atidarytos.</mark
 								>
 							</p>
@@ -53,6 +63,7 @@
 							</p>
 						</div>
 						<div class="image" id="s-d-3"></div>
+						<div class="image" id="s-d-7"></div>
 					</div>
 
 					<div class="step">
@@ -64,6 +75,24 @@
 							</p>
 						</div>
 						<div class="image" id="s-d-4"></div>
+						<div class="image" id="s-d-8"></div>
+					</div>
+
+					<div class="step">
+						<h1>Išėjimas / Išvykimas</h1>
+						<div class="instruction-text">
+							<p>
+								Išeinant pėsčiųjų vartelius atidarysite paspaudus "Exit" mygtuką ant
+								sienos šalia vartų. <br />
+								Išvykstant raktą nuo buto bei pultelį prašome palikti toje pačioje
+								dėžutėje.
+								<br />
+								<br />
+								Tai pat viešnagės metu galite naudoti domofoną (esantis lauke prie
+								vartelių ir laiptinės durų spaudžia nr.2, o esantis bute įleidžia).
+							</p>
+						</div>
+						<div class="image" id="s-d-9"></div>
 					</div>
 				</div>
 			</div>
