--- a/Gatves/Stikliu/Directions/No-parking/stikliu-directions-ru.html
+++ b/Gatves/Stikliu/Directions/No-parking/stikliu-directions-ru.html
@@ -21,24 +21,34 @@
 					<div class="step">
 						<h1>Расположение</h1>
 						<div class="instruction-text">
-							<p>
-								Точный адрес - <mark>Gaono 10, квартира 2</mark> <br />Если ворота во
-								двор закрыты- на левой стене наберите код <mark>2*3909</mark>
-							</p>
+							<p>Точный адрес - <mark>Gaono 10, квартира 2</mark></p>
 						</div>
 						<div class="image" id="s-d-1"></div>
+						<div class="instruction-text">
+							<p>
+								Если ворота для пешеходов во двор закрыты- на левой стене наберите код
+								<mark>2*3909</mark>
+							</p>
+						</div>
+						<div class="image" id="s-d-6"></div>
 					</div>
 
 					<div class="step">
 						<h1>получение ключей</h1>
 						<div class="instruction-text">
 							<p>
-								Зайдите во двор (см. фото), там на правой стороне найдете коробку ABUS с
-								ключом от апартамента. <br />
+								Зайдите во двор на правой стороне найдете коробку ABUS.
+								<br />
+								<br />
 								<mark
-									>Введите код который получите и взяв ключи прокрутите любые цифры чтобы
-									не остался код.</mark
+									>Введите код который получите в письме и взяв ключи прокрутите любые
+									цифры чтобы не остался код.</mark
 								>
+								<br />
+								<br />
+								В коробке найдете ключ от квартиры и пульт от ворот если нужна парковка
+								во дворе. Ворота открываются нажав букву А, закрываются автоматично
+								через 30 сек.
 							</p>
 						</div>
 						<div class="image" id="s-d-2"></div>
@@ -53,7 +63,9 @@
 							</p>
 						</div>
 						<div class="image" id="s-d-3"></div>
+						<div class="image" id="s-d-7"></div>
 					</div>
+
 					<div class="step">
 						<div class="instruction-text">
 							<p>
@@ -62,6 +74,25 @@
 							</p>
 						</div>
 						<div class="image" id="s-d-4"></div>
+						<div class="image" id="s-d-8"></div>
+					</div>
+
+					<div class="step">
+						<h1>Выход/Отъезд</h1>
+						<div class="instruction-text">
+							<p>
+								Выходя, откройте пешеходные ворота, нажав кнопку «Выход» на стены возле
+								ворот. <br />
+								При отъезде, пожалуйста, оставьте ключ от квартиры и пульт
+								дистанционного управления в той же коробке.
+								<br />
+								<br />
+								Вы также можете использовать домофон во время вашего прибывания
+								(человек, находящийся снаружи около пешеходных ворот или двери подъезда
+								нажимает но. 2, а находящийся дома открывает в домофоне).
+							</p>
+						</div>
+						<div class="image" id="s-d-9"></div>
 					</div>
 				</div>
 			</div>
