added info stikliu

--- a/Gatves/Stikliu/Directions/No-parking/stikliu-directions-en.html
+++ b/Gatves/Stikliu/Directions/No-parking/stikliu-directions-en.html
@@ -10,9 +10,7 @@
 	<body>
 		<navbar-component-pc></navbar-component-pc>
 		<navbar-component-phone></navbar-component-phone>
-		<language-select
-			src="/Gatves/Stikliu/Directions/No-parking/stikliu-directions-en.html"
-		></language-select>
+		<language-select src="/Gatves/Stikliu/Directions/No-parking/stikliu-directions-en.html"></language-select>
 		<div>
 			<div class="dir-container">
 				<div class="directions">
@@ -26,8 +24,8 @@
 						<div class="image" id="s-d-1"></div>
 						<div class="instruction-text">
 							<p>
-								The entry is through a gateway. If the gates to the yard are closed,
-								please enter the code <mark>2*3909</mark> on the wall to Your left.
+								The entry is through a gateway. If the gates to the yard are closed, please enter the code
+								<mark>2*3909</mark> on the wall to Your left.
 							</p>
 						</div>
 						<div class="image" id="s-d-6"></div>
@@ -37,18 +35,17 @@
 						<h1>Obtaining the keys</h1>
 						<div class="instruction-text">
 							<p>
-								When You go through the gate, You will see a keybox on your right. Open
-								the ABUS keybox with a code you have received in the email.
+								When You go through the gate, You will see a keybox on your right. Open the ABUS keybox with a code you have
+								received in the email.
 								<br />
 								<br />
-								In the keybox You will find the apartment key and a remote for the gate,
-								if parking is necessary. The 'A' button on the remote opens the gates,
-								who automatically close after 30 sec.
+								In the keybox You will find the apartment key and a remote for the gate, if parking is necessary. The 'A' button
+								on the remote opens the gates, who automatically close after 30 sec.
 								<br />
 								<br />
 								<mark>
-									When You have taken the apartment keys from the keybox, close it and
-									dial a random combination, do not leave it unlocked.</mark
+									When You have taken the apartment keys from the keybox, close it and dial a random combination, do not leave it
+									unlocked.</mark
 								>
 							</p>
 						</div>
@@ -60,8 +57,7 @@
 						<div class="instruction-text">
 							<p>
 								Now you can go to the brown door and enter the same code
-								<mark>2*3909</mark> on the left wall . Then turn <mark>right</mark> and
-								climb up the stairs.
+								<mark>2*3909</mark> on the left wall . Then turn <mark>right</mark> and climb up the stairs.
 							</p>
 						</div>
 						<div class="image" id="s-d-3"></div>
@@ -71,10 +67,7 @@
 					<div class="step">
 						<h1>Entering the apartment</h1>
 						<div class="instruction-text">
-							<p>
-								You will be able to open Apartment <mark>number 2</mark> with the key
-								you have gotten outside.
-							</p>
+							<p>You will be able to open Apartment <mark>number 2</mark> with the key you have gotten outside.</p>
 						</div>
 						<div class="image" id="s-d-4"></div>
 						<div class="image" id="s-d-8"></div>
@@ -84,15 +77,12 @@
 						<h1>Exit / Departure</h1>
 						<div class="instruction-text">
 							<p>
-								When leaving, open the pedestrian gate by pressing the "Exit" button on
-								the walls near the gate. <br />
-								On your departure, please leave the apartment key and the remote control
-								in the same box.
+								When leaving, open the pedestrian gate by pressing the "Exit" button on the walls near the gate. <br />
+								On your departure, please leave the apartment key and the remote control in the same box.
 								<br />
 								<br />
-								You can also use the intercom during your stay (person located outside
-								presses no. 2 on the gate and stairwell door, and the one in the
-								apartment lets in).
+								You can also use the intercom during your stay (person located outside presses no. 2 on the gate and stairwell
+								door, and the one in the apartment lets in).
 							</p>
 						</div>
 						<div class="image" id="s-d-9"></div>
