--- a/Gatves/Stikliu/Info/stikliu-info-arrival-en.html
+++ b/Gatves/Stikliu/Info/stikliu-info-arrival-en.html
@@ -15,7 +15,10 @@
 			<h1 class="info-title">Information</h1>
 
 			<div class="expandable">
-				<div class="header">Entrance</div>
+				<div class="header">
+					<h4>Enterance</h4>
+					<img src="/Icons/enter.png" />
+				</div>
 				<div class="content">
 					<p>
 						You will receive information about the entrance code, apartment key, and parking remote the day before arrival.
@@ -28,7 +31,10 @@
 			</div>
 
 			<div class="expandable">
-				<div class="header">WiFi</div>
+				<div class="header">
+					<h4>Wifi</h4>
+					<img src="/Icons/wifi.png" />
+				</div>
 				<div class="content">
 					<p>Username: Externus1</p>
 					<p>Password: veryvilnius.com</p>
@@ -36,7 +42,10 @@
 			</div>
 
 			<div class="expandable">
-				<div class="header">TV Control</div>
+				<div class="header">
+					<h4>TV Control</h4>
+					<img src="/Icons/television.png" />
+				</div>
 				<div class="content">
 					<p>Turn on both remotes.</p>
 					<p>Select "TV" on the top of the screen (with the small remote).</p>
@@ -47,7 +56,10 @@
 			</div>
 
 			<div class="expandable">
-				<div class="header">Water</div>
+				<div class="header">
+					<h4>Water</h4>
+					<img src="/Icons/drop.png" />
+				</div>
 				<div class="content">
 					<p>Tap water is drinkable.</p>
 					<p>
@@ -58,7 +70,10 @@
 			</div>
 
 			<div class="expandable">
-				<div class="header">Heating/Cooling</div>
+				<div class="header">
+					<h4>Heating/Cooling</h4>
+					<img src="/Icons/ventilation.png" />
+				</div>
 				<div class="content">
 					<p>The apartment has central heating, which cannot be adjusted.</p>
 					<p>
@@ -72,7 +87,10 @@
 			</div>
 
 			<div class="expandable">
-				<div class="header">Sofa Bed in the Living Room</div>
+				<div class="header">
+					<h4>Sofa Bed in the Living Room</h4>
+					<img src="/Icons/sofa.png" />
+				</div>
 				<div class="content">
 					<p>
 						The sofa easily converts into a comfortable bed. Simply remove the backrest cushions, lift the seating part upward
@@ -83,21 +101,30 @@
 			</div>
 
 			<div class="expandable">
-				<div class="header">Safe</div>
+				<div class="header">
+					<h4>Safe</h4>
+					<img src="/Icons/safe.png" />
+				</div>
 				<div class="content">
 					<p>You can use the safe. Please contact the hosts for the code.</p>
 				</div>
 			</div>
 
 			<div class="expandable">
-				<div class="header">Smoking</div>
+				<div class="header">
+					<h4>Smoking</h4>
+					<img src="/Icons/smoking.png" />
+				</div>
 				<div class="content">
 					<p>Smoking is not allowed inside the apartment or stairwell. Please use the outdoor courtyard for smoking.</p>
 				</div>
 			</div>
 
 			<div class="expandable">
-				<div class="header">Trash</div>
+				<div class="header">
+					<h4>Trash</h4>
+					<img src="/Icons/trash.png" />
+				</div>
 				<div class="content">
 					<p>
 						The trash container is located 200 m away from the apartment, heading toward Vokiečių Street via Antokolskio
@@ -107,7 +134,10 @@
 			</div>
 
 			<div class="expandable">
-				<div class="header">Equipment</div>
+				<div class="header">
+					<h4>Equipment</h4>
+					<img src="/Icons/kitchen.png" />
+				</div>
 				<div class="content">
 					<p>
 						The apartment includes a washing machine, dishwasher, gas stove (operated by push-button ignition without
@@ -121,7 +151,10 @@
 			</div>
 
 			<div class="expandable">
-				<div class="header">Departure</div>
+				<div class="header">
+					<h4>Departure</h4>
+					<img src="/Icons/leave.png" />
+				</div>
 				<div class="content">
 					<p>
 						Leave all keys in the same place where you found them (don’t forget to leave the additional key set in the
@@ -142,6 +175,8 @@
 					</p>
 				</div>
 			</div>
+
+			<a class="footer-ref" href="https://www.flaticon.com/free-icons/login" title="login icons">Icons used by Flaticon</a>
 		</div>
 	</body>
 </html>
