--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
 <html lang="en">
 	<head>
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-		<meta
-			charset="utf-8"
-			nname="viewport"
-			content="width=device-width, initial-scale=1.0"
-		/>
+		<meta charset="utf-8" nname="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" type="text/css" href="/Style.css" />
 		<script src="/Components/Custom.js" type="text/javascript" defer></script>
 		<title>Very Vilnius</title>
@@ -23,37 +19,25 @@
 					<a href="/Gatves/Pilies/pilies.html">
 						<div class="street-links animation-hover">PILIES STREET</div>
 					</a>
-					<img
-						class="booking"
-						src="/Home-img/Booking-award.jpg"
-						alt="Booking-award"
-					/>
+					<img class="booking" src="/Home-img/Booking-award.jpg" alt="Booking-award" />
 				</div>
 				<div class="apartment-opt">
 					<img class="thumb-img" src="/Home-img/Stikliu.jpg" alt="Stikliu-street" />
 					<a href="/Gatves/Stikliu/stikliu.html">
 						<div class="street-links animation-hover">STIKLIŲ STREET</div>
 					</a>
-					<img
-						class="booking"
-						src="/Home-img/Booking-award.jpg"
-						alt="Booking-award"
-					/>
+					<img class="booking" src="/Home-img/Booking-award.jpg" alt="Booking-award" />
 				</div>
 				<div class="apartment-opt">
 					<img class="thumb-img" src="/Home-img/Vilniaus.jpg" alt="Stikliu-street" />
 					<a href="/Gatves/Vilniaus/vilniaus.html">
 						<div class="street-links animation-hover">VILNIUS STREET</div>
 					</a>
-					<img
-						class="booking"
-						src="/Home-img/Booking-award.jpg"
-						alt="Booking-award"
-					/>
+					<img class="booking" src="/Home-img/Booking-award.jpg" alt="Booking-award" />
 				</div>
 			</div>
-			<h1 id="subtitle">VERY VILNIUS APARTMENTS</h1>
-			<h1 id="subtitle">V 1.21</h1>
+			<h1 class="subtitle">VERY VILNIUS APARTMENTS</h1>
+			<h1 class="subtitle">V 1.21</h1>
 		</div>
 	</body>
 </html>
